External-DNS-EKS/01.MySQL-ExtName-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: usermgmtdb.cywnzolsdhzp.us-east-1.rds.amazonaws.com
